<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FtpServer</string>
    <string name="status">Server Status:</string>
    <string name="action_settings">Settings</string>
    
    <string name="server_off">Off</string>
    <string name="server_on">On</string>
    <string name="server_opening">Initialing...</string>
    
    <string name="ip">Server IP:</string>
    <string name="default_ip">0.0.0.0</string>
    
    <string name="port">Server Port:</string>
    <string name="default_port">2221</string>
    
    <string name="path">Home Directory:</string>
    <string name="default_path">/mnt/sdcard/ftp</string>
    
    <string name="idle_time">Client IdleTime:</string>
    <string name="default_idle_time">300s</string>
    
    <string name="enable_server">Enable FTP Server</string>
    <string name="server_port">Server Port</string>
    <string name="file_path">Home Directory</string> 
    
    <string name="restore_default">Restore default</string>
    

</resources>
