<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:title="Ftp Server Settings" >  
    
	    <PreferenceScreen  
	        android:key="enable_server" 
	        android:summary="@string/server_on"
	        android:title="@string/enable_server" />
	        
	    
	   <!--   --> 
	    <EditTextPreference   
	        android:key="server_port"  
	        android:summary="@string/default_port"
	        android:title="@string/server_port" /> 

    </PreferenceCategory> 
    
    <PreferenceCategory android:title="FILE Settings" >
          
        <EditTextPreference   
        	android:key="file_path"  
        	android:selectable="false"
        	android:summary="@string/default_path"  
        	android:title="@string/file_path" /> 
        	
    </PreferenceCategory>   
    
    <PreferenceCategory android:title="System Settings" >
          
        <PreferenceScreen   
        	android:key="restore_default"   
        	android:title="@string/restore_default" /> 
        	
    </PreferenceCategory>   
    
</PreferenceScreen>
