<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    tools:context="com.example.ftpserver.EmbeddingFtpServerActivity" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linearlayout_status"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/status" />
	    
	    <TextView
	        android:id="@+id/server_status"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="45dp"
	        android:text="@string/server_off" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearlayout_ip"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_status">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ip" />
	    
	    <TextView
	        android:id="@+id/server_ip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="72dp"
	        android:text="@string/default_ip" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearlayout_port"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_ip">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/port" />
	    
	    <TextView
	        android:id="@+id/server_port"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dp"
	        android:text="@string/default_port" />
    
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/linearlayout_path"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_port">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/path" />
	    
	    <TextView
	        android:id="@+id/path"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="35dp"
	        android:text="@string/default_path" />
    
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_path">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/idle_time" />
	    
	    <TextView
	        android:id="@+id/idletime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="38dp"
	        android:text="@string/default_idle_time" />
    
    </LinearLayout>
     

</RelativeLayout>
